--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ addons:
 notification:
   email: false
 
+before_script:
+  - export CC=gcc-7
+  - export CXX=g++-7
+
 script:
   - mkdir ./build
   - cd ./build
