Avoid MSVC compile warning using '_CRT_SECURE_NO_WARNINGS'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,3 +36,7 @@ if(UNIX)
     find_package(Threads)
     target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
 endif()
+
+if(WIN32)
+    target_compile_definitions(${PROJECT_NAME} PRIVATE _CRT_SECURE_NO_WARNINGS)
+endif()
